--- a/api/composer.json
+++ b/api/composer.json
@@ -23,7 +23,8 @@
         "league/openapi-psr7-validator": "^0.22.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "^10.0"
+        "phpunit/phpunit": "^10.0",
+        "friendsofphp/php-cs-fixer": "^3.51"
     },
     "autoload": {
         "psr-4": {
