--- a/worker/composer.json
+++ b/worker/composer.json
@@ -18,7 +18,8 @@
         "ext-amqp": "*"
     },
     "require-dev": {
-        "phpunit/phpunit": "^10.0"
+        "phpunit/phpunit": "^10.0",
+        "friendsofphp/php-cs-fixer": "^3.51"
     },
     "autoload": {
         "psr-4": {
